fix for exception at startup due to read access from a non-event-dispatch thread